<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Welsh Finance</string>
    <string name="search_hint">Search your records</string>
    <string name="add_accounts">Add Account</string>
    <string name="delete_accounts">Delete Account</string>
    <string name="view_accounts">View Accounts</string>
    <string name="clear_database">Clear Database</string>
    <string name="back">Back</string>
    <string name="accounts">Accounts</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="done">Done</string>
    <string name="account:">ACCOUNT:</string>
    <string name="balance:">BALANCE:</string>
    <string name="name:">NAME:</string>
    <string name="value:">VALUE:</string>
    <string name="type:">TYPE:</string>
    <string name="every:">EVERY:</string>
    <string name="next:">NEXT:</string>
    <string name="start_on:">START ON:</string>
    <string name="category:">CATEGORY:</string>
    <string name="add">add</string>
    <string name="checknum:">CHECK NUM:</string>
    <string name="memo:">MEMO:</string>
    <string name="date:">DATE:</string>
    <string name="scheduled:">SCHEDULED:</string>
    <string name="cleared:">CLEARED:</string>
    <string name="drawer_open">Drawer is open</string>
    <string name="drawer_closed">Drawer is closed</string>
    <string name="pref_key_account_nameSize">key_account_nameSize</string>
    <string name="pref_key_account_fieldSize">key_account_fieldSize</string>
    <string name="pref_key_transaction_nameSize">key_transaction_nameSize</string>
    <string name="pref_key_transaction_fieldSize">key_transaction_fieldSize</string>
    <string name="pref_key_plan_nameSize">key_plan_nameSize</string>
    <string name="pref_key_plan_fieldSize">key_plan_fieldSize</string>
    <string name="pref_key_category_nameSize">key_category_nameSize</string>
    <string name="pref_key_category_fieldSize">key_category_fieldSize</string>
    <string name="pref_key_subcategory_nameSize">key_subcategory_nameSize</string>
    <string name="pref_key_subcategory_fieldSize">key_subcategory_fieldSize</string>

    <string-array name="drawer_items">
        <item>Home</item>
        <item>Checkbook</item>
        <item>Categories</item>
        <item>Plans</item>
        <item>Statistics</item>
        <item>Options</item>
        <item>Help</item>
        <item>Exit</item>
    </string-array>
    <string-array name="transaction_type">
        <item>Withdraw</item>
        <item>Deposit</item>
    </string-array>
    <string-array name="rate_type">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string-array name="link_type">
        <item>Picture</item>
        <item>Video</item>
        <item>Audio</item>
        <item>File</item>
        <item>Contact</item>
        <item>Any</item>
    </string-array>
    <string-array name="sort_options_account">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Largest</item>
        <item>Smallest</item>
        <item>Alphabetical</item>
        <item>None</item>
    </string-array>
    <string-array name="sort_options_transaction">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Largest</item>
        <item>Smallest</item>
        <item>Category</item>
        <item>Type</item>
        <item>Alphabetical</item>
        <item>None</item>
    </string-array>
    <string-array name="transaction_category">
        <item>ALLOWANCE</item>
        <item>ATM</item>
        <item>CHECK</item>
        <item>FOOD</item>
        <item>GASOLINE</item>
        <item>GIFT</item>
        <item>GROCERIES</item>
        <item>MORTGAGE</item>
        <item>OTHER</item>
        <item>PAYCHECK</item>
        <item>RENT</item>
        <item>STARTING BALANCE</item>
        <item>STUDENT LOANS</item>
        <item>TIP</item>
        <item>TRANSFER</item>
    </string-array>
    <string-array name="pref_transaction_listOptions">
        <item>Name</item>
        <item>Value</item>
        <item>Time</item>
        <item>Date</item>
    </string-array>
    <string-array name="pref_transaction_listValues">
        <item>List Value Name</item>
        <item>List Value Value</item>
        <item>List Value Time</item>
        <item>List Value Date</item>
    </string-array>
    <string-array name="pref_account_listOptions">
        <item>Name</item>
        <item>Balance</item>
        <item>Time</item>
        <item>Date</item>
    </string-array>
    <string-array name="pref_account_listValues">
        <item>List Value Name</item>
        <item>List Value Balance</item>
        <item>List Value Time</item>
        <item>List Value Date</item>
    </string-array>

</resources>