<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="pref_screen_appearance"
        android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >

        <!-- ACCOUNT APPEARANCE -->

        <PreferenceScreen
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:key="pref_screen_accounts"
            android:summary="Change appearance of accounts"
            android:title="Account Appearance" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:disableDependentsState="true"
                android:key="checkbox_default_appearance_account"
                android:summary="Use Default Values instead of User-Defined Ones"
                android:title="Use Default Values" >
            </CheckBoxPreference>

            <PreferenceCategory
                android:summary="Change background"
                android:title="Background" >
                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    alphaSlider="true"
                    android:defaultValue="-1513240"
                    android:dependency="checkbox_default_appearance_account"
                    android:key="key_account_startBackgroundColor"
                    android:summary="Starting background color of each account row."
                    android:title="Background Starting Color" >
                </net.margaritov.preference.colorpicker.ColorPickerPreference>
                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    alphaSlider="true"
                    android:defaultValue="-1"
                    android:dependency="checkbox_default_appearance_account"
                    android:key="key_account_endBackgroundColor"
                    android:summary="Ending background color of each account row."
                    android:title="Background Ending Color" >
                </net.margaritov.preference.colorpicker.ColorPickerPreference>
            </PreferenceCategory>
            <PreferenceCategory
                android:summary="Change fonts"
                android:title="Fonts" >
                <EditTextPreference
                    android:defaultValue="16"
                    android:dependency="checkbox_default_appearance_account"
                    android:digits="0123456789"
                    android:inputType="number|phone"
                    android:key="@string/pref_key_account_nameSize"
                    android:summary="Change the size of Name field. Default is &apos;16&apos;"
                    android:title="Size of main field" >
                </EditTextPreference>

                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    alphaSlider="true"
                    android:defaultValue="-16777216"
                    android:dependency="checkbox_default_appearance_account"
                    android:key="key_account_nameColor"
                    android:summary="Change the color of Name field."
                    android:title="Color of main field" >
                </net.margaritov.preference.colorpicker.ColorPickerPreference>

                <EditTextPreference
                    android:defaultValue="10"
                    android:dependency="checkbox_default_appearance_account"
                    android:digits="0123456789"
                    android:inputType="number|phone"
                    android:key="@string/pref_key_account_fieldSize"
                    android:summary="Change the size of secondary fields. Default is &apos;10&apos;"
                    android:title="Size of secondary fields" >
                </EditTextPreference>

                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    alphaSlider="true"
                    android:defaultValue="-16737844"
                    android:dependency="checkbox_default_appearance_account"
                    android:key="key_account_fieldColor"
                    android:summary="Change the color of secondary fields."
                    android:title="Color of secondary fields" >
                </net.margaritov.preference.colorpicker.ColorPickerPreference>
            </PreferenceCategory>
            <PreferenceCategory
                android:summary="Change fields"
                android:title="Fields" >
                <PreferenceScreen
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:dependency="checkbox_default_appearance_account"
                    android:key="pref_screen_account_fields"
                    android:summary="Change fields visible for account"
                    android:title="Account Fields" >
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_account_nameField"
                        android:summary="Name Field"
                        android:title="Name" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_account_balanceField"
                        android:summary="Balance Field"
                        android:title="Balance" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_account_dateField"
                        android:summary="Date Field"
                        android:title="Date" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_account_timeField"
                        android:summary="Time Field"
                        android:title="Time" >
                    </CheckBoxPreference>
                </PreferenceScreen>
            </PreferenceCategory>
        </PreferenceScreen>

        <!-- TRANSACTION APPEARANCE -->

        <PreferenceScreen
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:key="pref_screen_transactions"
            android:summary="Change appearance of transactions"
            android:title="Transaction Appearance" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:disableDependentsState="true"
                android:key="checkbox_default_appearance_transaction"
                android:summary="Use Default Values instead of User-Defined Ones"
                android:title="Use Default Values" >
            </CheckBoxPreference>

            <PreferenceCategory
                android:summary="Change background"
                android:title="Background" >
                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    alphaSlider="true"
                    android:defaultValue="-1513240"
                    android:dependency="checkbox_default_appearance_transaction"
                    android:key="key_transaction_startBackgroundColor"
                    android:summary="Starting background color of each transaction row."
                    android:title="Background Starting Color" />
                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    alphaSlider="true"
                    android:defaultValue="-1"
                    android:dependency="checkbox_default_appearance_transaction"
                    android:key="key_transaction_endBackgroundColor"
                    android:summary="Ending background color of each transaction row."
                    android:title="Background Ending Color" >
                </net.margaritov.preference.colorpicker.ColorPickerPreference>
            </PreferenceCategory>
            <PreferenceCategory
                android:summary="Change fonts"
                android:title="Fonts" >
                <EditTextPreference
                    android:defaultValue="18"
                    android:dependency="checkbox_default_appearance_transaction"
                    android:digits="0123456789"
                    android:inputType="number|phone"
                    android:key="@string/pref_key_transaction_nameSize"
                    android:summary="Change the size of Name field. Default is &apos;20&apos;"
                    android:title="Size of main field" >
                </EditTextPreference>

                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    alphaSlider="true"
                    android:defaultValue="-16777216"
                    android:dependency="checkbox_default_appearance_transaction"
                    android:key="key_transaction_nameColor"
                    android:summary="Change the color of Name field."
                    android:title="Color of main field" >
                </net.margaritov.preference.colorpicker.ColorPickerPreference>

                <EditTextPreference
                    android:defaultValue="10"
                    android:dependency="checkbox_default_appearance_transaction"
                    android:digits="0123456789"
                    android:inputType="number|phone"
                    android:key="@string/pref_key_transaction_fieldSize"
                    android:summary="Change the size of Name field. Default is &apos;10&apos;"
                    android:title="Size of secondary fields" >
                </EditTextPreference>

                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    alphaSlider="true"
                    android:defaultValue="-16737844"
                    android:dependency="checkbox_default_appearance_transaction"
                    android:key="key_transaction_fieldColor"
                    android:summary="Change the color of Name field."
                    android:title="Color of secondary fields" >
                </net.margaritov.preference.colorpicker.ColorPickerPreference>
            </PreferenceCategory>
            <PreferenceCategory
                android:summary="Change fields"
                android:title="Fields" >
                <PreferenceScreen
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:dependency="checkbox_default_appearance_transaction"
                    android:key="pref_screen_transaction_fields"
                    android:summary="Change fields visible for transaction"
                    android:title="Transaction Fields" >
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_transaction_nameField"
                        android:summary="Name Field"
                        android:title="Name" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_transaction_valueField"
                        android:summary="Value Field"
                        android:title="Value" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="checkbox_transaction_typeField"
                        android:summary="Type Field"
                        android:title="Type" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_transaction_categoryField"
                        android:summary="Category Field"
                        android:title="Category" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_transaction_checknumField"
                        android:summary="Check Number Field"
                        android:title="Check Number" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="checkbox_transaction_memoField"
                        android:summary="Memo Field"
                        android:title="Memo" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_transaction_dateField"
                        android:summary="Date Field"
                        android:title="Date" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="checkbox_transaction_timeField"
                        android:summary="Time Field"
                        android:title="Time" >
                    </CheckBoxPreference>
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="checkbox_transaction_clearedField"
                        android:summary="Cleared Field"
                        android:title="Cleared" >
                    </CheckBoxPreference>
                </PreferenceScreen>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceScreen>

    <include
        android:id="@+id/drawer"
        layout="@layout/drawer" />

</android.support.v4.widget.DrawerLayout>